# REASAN

./: .gitignore  README.md
deployment/: README.md
deployment/reasan/: .gitignore  CMakeLists.txt  advanced_gamepad.hpp  config.yaml  filter_node.cpp  goal_control.py  lidar_ros_preprocess.cpp  locomotion_node.cpp  navigation_node.cpp  odom_node.cpp  package.xml  ray_estimation_node.cpp  run_build.sh  terminal_control.py  wireless_control.py
deployment/reasan/model/: filter_1.onnx
deployment/resple_ws/src/RESPLE/: README.md
deployment/resple_ws/src/RESPLE/resple/: CMakeLists.txt  package.xml
deployment/resple_ws/src/RESPLE/resple/config/: config_dog.yaml
deployment/resple_ws/src/RESPLE/resple/include/: SplineState.h
deployment/resple_ws/src/RESPLE/resple/include/utils/: common_utils.h
deployment/resple_ws/src/RESPLE/resple/launch/: resple_dog.launch.py
deployment/resple_ws/src/RESPLE/resple/src/: RESPLE.cpp
training/IsaacLab/: .gitignore
training/go2_lidar/: pyproject.toml
training/go2_lidar/go2_lidar/motor/: random_dc_motor.py
training/go2_lidar/go2_lidar/sensor/: lidar_pattern.py  livox_scan_generator.py  raycaster_dynamic.py  raycaster_kernels.py  raycaster_utils.py
training/go2_lidar/go2_lidar/tasks/: __init__.py  go2_filter_env.py  go2_filter_env_cfg.py  go2_filter_ppo_cfg.py  go2_loco_env.py  go2_loco_env_cfg.py  go2_loco_ppo_cfg.py  go2_nav_env.py  go2_nav_env_cfg.py  go2_nav_ppo_cfg.py
training/go2_lidar/go2_lidar/terrain/: hf_terrains.py  hf_terrains_cfg.py  mesh_terrains.py  mesh_terrains_cfg.py  nav_terrain_generator.py  test_terrain_generator.py  train_terrain_cfg.py  utils.py
training/go2_lidar/go2_lidar/utils/: hdf5_data_collector.py
training/logs/rsl_rl/go2_lidar/filter_1/exported/: policy.onnx  policy.pt
training/logs/rsl_rl/go2_lidar/loco_1/exported/: policy.onnx  policy.pt
training/logs/rsl_rl/go2_lidar/nav_1/exported/: policy.onnx  policy.pt
training/ray_predictor/: pyproject.toml
training/ray_predictor/ray_predictor/: train_ray_estimator.py  visualize_ray_estimator_data.py
training/rsl_rl/rsl_rl/algorithms/: distillation.py
training/rsl_rl/rsl_rl/modules/: __init__.py  actor_critic_filter.py  actor_critic_recurrent_ray.py
training/rsl_rl/rsl_rl/runners/: __init__.py  on_policy_runner.py  on_policy_runner_loco.py
training/scripts/: cli_args.py  play_filter.py  play_loco.py  play_nav.py  train_filter.py  train_loco.py  train_nav.py
