<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>lidar_processor</name>
    <version>0.1.0</version>
    <description>A ROS2 package for processing LiDAR data and visualizing rays in RViz</description>
    <maintainer email="your_email@example.com">Your Name</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>livox_ros_driver2</depend>
    <depend>visualization_msgs</depend>
    <depend>mocap4r2_msgs</depend>
    <depend>eigen</depend>
    <depend>nav_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>